tests/diagnostics/file_roles/exports_declarations/in_test/expect.txt
# exit: 1
input/lib.test.coppice:1:1: error: exports declarations are only allowed in PACKAGE.coppice
  exports { Token }
  ^
